# SUAI_RAG_BOT_SERVER

./: .gitignore  Dockerfile  apply_migration.py  check_history.py  pyproject.toml  test_context.py
.github/workflows/: deploy.yml
migrations/: 002_chat_history.sql
parser/: qdrnt.py
parser/out_spider/: settings.py
parser/out_spider/spiders/: content_docx.py  suai_rasp_spider.py  suai_spider.py
rag_sources/: docx_to_chunks.py  html_to_chunks.py  making_embeddings.py  making_json_of_chunks.py  minio_client.py  pdf_to_chunks.py  python_bot.py  qdrant_search.py  txt_to_chunks.py
src/: app_init.py  config.yml
src/core/: __init__.py  agent_config.py  agent_definition.py  agent_factory.py  base_agent.py  base_tool.py  next_step_tool.py  service.py
src/core/agents/: __init__.py  sgr_agent.py
src/core/prompts/: system_prompt.txt
src/core/services/: __init__.py  prompt_loader.py  registry.py  tavily_search.py
src/core/tools/: __init__.py  adapt_plan_tool.py  clarification_tool.py  create_report_tool.py  extract_page_content_tool.py  final_answer_tool.py  generate_plan_tool.py  out_of_domain_tool.py  reasoning_tool.py  search_tool.py  web_search_tool.py
src/dao/: chat_history_dao.py
src/db/models/: __init__.py  chat_history.py
src/endpoints/models/: agent_models.py  chat_models.py
src/endpoints/routers/: agent_router.py  chat_router.py
src/services/: telegram_service.py
src/utils/: config.py
tests/: test_agent.py  test_service.py
